# Automate

./: .gitignore  README.md
.github/workflows/: crystal.yml  ruby.yml  rust.yml
C/: Automate.c  Automate.h  CMakeLists.txt  testAutomate.cc
C/map/: map.c  map.h  testMap.cc
C/pair/: pair.c  pair.h  testPair.cc
C/set/: set.c  set.h  testSet.cc
C/vector/: testVector.cc  vector.c  vector.h
Crystal/spec/: Automaton.cr  test_spec.cr
Dart/: README.md  pubspec.yaml
Dart/lib/automate/: Automate.dart
Dart/web/: index.html  manifest.json
Java/Automate2/: pom.xml
Java/Automate2/src/main/java/automate/: Automate.java
Java/Automate2/src/test/java/automate/: testAutomate.java
Java/automate/: pom.xml
Java/automate/src/main/java/automate/: Automate.java
Java/automate/src/main/java/fr/automate/: Automate.java
Java/automate/src/main/java/java/automate/: Automate.java
Java/automate/src/test/java/automate/: testAutomate.java
Java/automate/src/test/java/fr/automate/: testAutomate.java
Java/automate/src/test/java/java/automate/: testAutomate.java
Ruby/: index.html  prettyPrint.txt
Ruby/lib/: Automaton.rb
Ruby/spec/: Automaton_spec.rb  Automaton_spec_helper.rb
Rust/src/: automate.rs  main.rs
